--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,23 @@
 {
-  "name": "backend",
+  "name": "myservice",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "handler.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "nodemon --exec \"sls offline start\"",
+    "deploy": "npx sls deploy"
   },
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "serverless-offline": "^11.1.1"
+  },
   "dependencies": {
-    "express": "^4.18.1",
+    "jest": "^29.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "serverless-middleware": "^3.0.0"
   }
 }
